@@ -9,6 +9,11 @@
 	* src/gnome-cmd-con-ftp.cc:
 	Removed superfluous code for anonymous user handling
 
+	* src/gnome-cmd-con-dialog.cc:
+	* src/gnome-cmd-con-ftp.cc:
+	* src/gnome-cmd-con-ftp.h:
+	Removed superfluous code for host_port handling
+
 2008-07-14  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-con-ftp:
